style: Add GitHub-like Box component for layout

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,8 +8,10 @@ layout: default
     <p class="post-meta">{{ page.date | date: "%Y年%m月%d日" }}</p>
   </header>
 
-  <div class="post-content">
-    {{ content }}
+  <div class="Box">
+    <div class="Box-body post-content">
+      {{ content }}
+    </div>
   </div>
 
 </article>
