--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -180,6 +180,34 @@ body {
   }
 }
 
+// --- GitHub UI Components --- //
+.Box {
+  background-color: var(--color-bg-primary);
+  border: 1px solid var(--color-border-primary);
+  border-radius: 6px;
+}
+
+.Box-header {
+  padding: 16px;
+  margin: -1px -1px 0;
+  background-color: var(--color-bg-secondary);
+  border-bottom: 1px solid var(--color-border-primary);
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
+}
+
+.Box-body {
+  padding: 16px;
+}
+
+.Box-row {
+  padding: 16px;
+  border-top: 1px solid var(--color-border-primary);
+  &:first-of-type {
+    border-top: 0;
+  }
+}
+
 // --- Syntax Highlighting --- //
 .highlight {
   background: var(--color-highlight-bg);
