feat: Display post tags as labels

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -182,6 +182,36 @@ a {
 }
 
 // --- GitHub UI Components --- //
+.Label {
+  display: inline-block;
+  padding: 0.3em 0.6em;
+  font-size: 75%;
+  font-weight: 600;
+  line-height: 1;
+  color: var(--color-text-secondary);
+  background-color: var(--color-bg-secondary);
+  border: 1px solid var(--color-border-primary);
+  border-radius: 2em;
+  text-decoration: none;
+
+  &:hover {
+    text-decoration: none;
+    opacity: 0.8;
+  }
+}
+
+.post-tags {
+  margin-top: 2em;
+  h3 {
+    font-size: 1em;
+    font-weight: 600;
+    color: var(--color-text-secondary);
+    margin-bottom: 0.5em;
+  }
+  .Label {
+    margin-right: 0.5em;
+  }
+}
 .Box {
   background-color: var(--color-bg-primary);
   border: 1px solid var(--color-border-primary);
