--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,4 +14,13 @@ layout: default
     </div>
   </div>
 
+  {% if page.tags.size > 0 %}
+  <div class="post-tags">
+    <h3>Tags:</h3>
+    {% for tag in page.tags %}
+      <a href="#" class="Label">{{ tag }}</a>
+    {% endfor %}
+  </div>
+  {% endif %}
+
 </article>
