feat: Add tag index page and related links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@
         <a class="site-title" href="{{ '/' | relative_url }}">{{ site.title }}</a>
         <nav class="site-nav">
           <a href="/about/">About</a>
+          <a href="/tags/">Tags</a>
           <!-- 他のナビゲーションリンクをここに追加 -->
         </nav>
       </div>
