--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,7 +18,7 @@ layout: default
   <div class="post-tags">
     <h3>Tags:</h3>
     {% for tag in page.tags %}
-      <a href="#" class="Label">{{ tag }}</a>
+      <a href="{{ site.baseurl }}/tags/#{{ tag | slugify }}" class="Label">{{ tag }}</a>
     {% endfor %}
   </div>
   {% endif %}
