feat: Redesign header with UnderlineNav component

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,15 +7,17 @@
     <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
   </head>
   <body>
-    <header class="site-header">
+    <header class="page-header">
       <div class="wrapper">
         <a class="site-title" href="{{ '/' | relative_url }}">{{ site.title }}</a>
-        <nav class="site-nav">
-          <a href="/about/">About</a>
-          <a href="/tags/">Tags</a>
-          <!-- 他のナビゲーションリンクをここに追加 -->
-        </nav>
       </div>
+      <nav class="UnderlineNav">
+        <div class="wrapper">
+          <a href="{{ '/' | relative_url }}" class="UnderlineNav-item {% if page.url == '/' %}is-selected{% endif %}">Home</a>
+          <a href="/tags/" class="UnderlineNav-item {% if page.url contains '/tags' %}is-selected{% endif %}">Tags</a>
+          <a href="/about/" class="UnderlineNav-item {% if page.url contains '/about' %}is-selected{% endif %}">About</a>
+        </div>
+      </nav>
     </header>
     <main class="page-content">
       <div class="wrapper">
