feat: Add copy button to code blocks

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,5 +29,6 @@
         <p>&copy; {{ 'now' | date: "%Y" }} {{ site.author.name | default: site.title }}.</p>
       </div>
     </footer>
+    <script src="{{ '/assets/js/main.js' | relative_url }}"></script>
   </body>
 </html>
