--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,26 +1,13 @@
 ---
 layout: default
 ---
-<article class="post">
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title | escape }}</h1>
-    <p class="post-meta">{{ page.date | date: "%Y年%m月%d日" }}</p>
-  </header>
-
-  <div class="Box">
-    <div class="Box-body post-content">
-      {{ content }}
-    </div>
+<article class="Box">
+  <div class="Box-header">
+    <h1 class="Box-title">{{ page.title | escape }}</h1>
+    <p class="text-gray-light mb-0 mt-1">{{ page.date | date: "%Y年%m月%d日" }}</p>
   </div>
-
-  {% if page.tags.size > 0 %}
-  <div class="post-tags">
-    <h3>Tags:</h3>
-    {% for tag in page.tags %}
-      <a href="{{ site.baseurl }}/tags/#{{ tag | slugify }}" class="Label">{{ tag }}</a>
-    {% endfor %}
+  <div class="Box-body markdown-body">
+    {{ content }}
   </div>
-  {% endif %}
-
 </article>
