--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,14 @@
   <body>
     {% include header.html %}
     <main class="container-lg p-3 p-md-4 p-lg-5">
-      {{ content }}
+      <div class="d-flex flex-wrap flex-lg-nowrap">
+        <div class="flex-auto col-lg-9 mr-lg-5">
+          {{ content }}
+        </div>
+        <div class="flex-shrink-0 col-lg-3">
+          {% include sidebar.html %}
+        </div>
+      </div>
     </main>
     {% include footer.html %}
   </body>
