feat: Rebuild theme based on Primer CSS and user instructions

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,7 @@
-<footer class="footer container-lg px-3">
-  <div class="d-flex flex-justify-center">
-    <span class="f6 text-gray">&copy; {{ 'now' | date: "%Y" }} {{ site.author.name | default: site.title }}.</span>
+<div class="footer container-lg width-full p-responsive" role="contentinfo">
+  <div class="position-relative d-flex flex-items-center pb-2 f6 color-fg-muted border-top color-border-muted">
+    <div class="d-flex flex-items-center">
+      <span class="mr-3">&copy; {{ "now" | date: "%Y" }} {{ site.author.name | default: site.title }}</span>
+    </div>
   </div>
-</footer>
+</div>
