--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,14 +1,11 @@
-<header class="Header">
+<div class="Header">
   <div class="Header-item">
-    <a href="{{ '/' | relative_url }}" class="Header-link f4 d-flex flex-items-center">
+    <a href="{{ site.baseurl }}/" class="Header-link f4 d-flex flex-items-center">
+      <!-- Octicon for repo -->
+      <svg height="16" class="octicon octicon-repo mr-2" viewBox="0 0 16 16" version="1.1" width="16" aria-hidden="true"><path fill-rule="evenodd" d="M2 2.5A2.5 2.5 0 014.5 0h8.75a.75.75 0 01.75.75v12.5a.75.75 0 01-.75.75h-2.5a.75.75 0 110-1.5h1.75v-2h-8a1 1 0 00-1 1v2h1.75a.75.75 0 010 1.5H4.5A2.5 2.5 0 012 13.5V2.5zM3.5 1h-1A1.5 1.5 0 001 2.5v11A1.5 1.5 0 002.5 15h.5a.75.75 0 010-1.5h-.5a.5.5 0 01-.5-.5v-2a.5.5 0 01.5-.5h8a.5.5 0 01.5.5v2a.5.5 0 01-.5.5h-.5a.75.75 0 010 1.5h.5A1.5 1.5 0 0014 13.5v-11A1.5 1.5 0 0012.5 1h-8A1.5 1.5 0 003.5 1zM5 6.25a.75.75 0 01.75-.75h4.5a.75.75 0 010 1.5h-4.5A.75.75 0 015 6.25z"></path></svg>
       <span>{{ site.title }}</span>
     </a>
   </div>
   <div class="Header-item Header-item--full"></div>
-  <div class="Header-item">
-    <a href="/about/" class="Header-link">About</a>
-  </div>
-  <div class="Header-item">
-    <a href="/tags/" class="Header-link">Tags</a>
-  </div>
-</header>
+  {% include navigation.html %}
+</div>
