--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
-<html lang="{{ site.locale | default: 'en-US' }}">
+<html lang="{{ site.locale | default: 'en-US' }}" data-color-mode="auto" data-light-theme="light" data-dark-theme="dark">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ page.title | default: site.title }}</title>
-    <link href="https://unpkg.com/@primer/css/dist/primer.css" rel="stylesheet" />
+    <!-- Primer CSS -->
+    <link href="https://unpkg.com/@primer/css@^20.0.0/dist/primer.css" rel="stylesheet" />
+    <!-- Custom styles -->
     <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
+    <!-- Octicons -->
+    <script type="module" src="https://unpkg.com/@primer/octicons@^18.0.0/dist/index.js"></script>
   </head>
   <body>
-    {% include header.html %}
-    <main class="container-lg p-3 p-md-4 p-lg-5">
-      <div class="d-flex flex-wrap flex-lg-nowrap">
-        <div class="flex-auto col-lg-9 mr-lg-5">
-          {{ content }}
-        </div>
-        <div class="flex-shrink-0 col-lg-3">
-          {% include sidebar.html %}
-        </div>
-      </div>
-    </main>
-    {% include footer.html %}
+    <div class="page">
+      {% include header.html %}
+      <main class="container-lg p-responsive">
+        {{ content }}
+      </main>
+      {% include footer.html %}
+    </div>
+    <script src="{{ '/assets/js/main.js' | relative_url }}"></script>
   </body>
 </html>
