--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,13 +1,12 @@
 ---
 layout: default
 ---
+<article class="markdown-body">
+  <h1>{{ page.title }}</h1>
+  <p class="f6 color-fg-muted">
+    <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%b %-d, %Y" }}</time>
+  </p>
 
-<article class="Box">
-  <div class="Box-header">
-    <h1 class="Box-title">{{ page.title | escape }}</h1>
-    <p class="text-gray-light mb-0 mt-1">{{ page.date | date: "%Y年%m月%d日" }}</p>
-  </div>
-  <div class="Box-body markdown-body">
-    {{ content }}
-  </div>
+  {{ content }}
+
 </article>
