--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -2,74 +2,4 @@
 # Jekyll needs front matter
 ---
 
-// Primer CSSを補完・上書きするためのカスタムスタイル
-
-body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
-}
-
-.markdown-body {
-  padding: 2em;
-}
-
-// --- Syntax Highlighting (GitHub Light Theme for Rouge) --- //
-.highlight .c { color: #57606a; font-style: italic }
-.highlight .err { color: #cf222e }
-.highlight .k { color: #cf222e }
-.highlight .o { color: #cf222e }
-.highlight .cm { color: #57606a; font-style: italic }
-.highlight .cp { color: #57606a; font-weight: bold }
-.highlight .c1 { color: #57606a; font-style: italic }
-.highlight .cs { color: #57606a; font-weight: bold; font-style: italic }
-.highlight .gd { color: #000; background-color: #ffdddd }
-.highlight .gd .x { color: #000; background-color: #ffaaaa }
-.highlight .ge { font-style: italic }
-.highlight .gr { color: #aa0000 }
-.highlight .gh { color: #999 }
-.highlight .gi { color: #000; background-color: #ddffdd }
-.highlight .gi .x { color: #000; background-color: #aaffaa }
-.highlight .go { color: #888 }
-.highlight .gp { color: #555 }
-.highlight .gs { font-weight: bold }
-.highlight .gu { color: #aaa }
-.highlight .gt { color: #a00 }
-.highlight .kc { color: #cf222e; font-weight: bold }
-.highlight .kd { color: #cf222e; font-weight: bold }
-.highlight .kn { color: #cf222e; font-weight: bold }
-.highlight .kp { color: #cf222e; font-weight: bold }
-.highlight .kr { color: #cf222e; font-weight: bold }
-.highlight .kt { color: #458; font-weight: bold }
-.highlight .m { color: #099 }
-.highlight .s { color: #0a3069 }
-.highlight .na { color: #008080 }
-.highlight .nb { color: #0086B3 }
-.highlight .nc { color: #458; font-weight: bold }
-.highlight .no { color: #008080 }
-.highlight .ni { color: #800080 }
-.highlight .ne { color: #900; font-weight: bold }
-.highlight .nf { color: #900; font-weight: bold }
-.highlight .nn { color: #555 }
-.highlight .nt { color: #000080 }
-.highlight .nv { color: #008080 }
-.highlight .ow { font-weight: bold }
-.highlight .w { color: #bbb }
-.highlight .mf { color: #099 }
-.highlight .mh { color: #099 }
-.highlight .mi { color: #099 }
-.highlight .mo { color: #099 }
-.highlight .sb { color: #0a3069 }
-.highlight .sc { color: #0a3069 }
-.highlight .sd { color: #0a3069 }
-.highlight .s2 { color: #0a3069 }
-.highlight .se { color: #0a3069 }
-.highlight .sh { color: #0a3069 }
-.highlight .si { color: #0a3069 }
-.highlight .sx { color: #0a3069 }
-.highlight .sr { color: #009926 }
-.highlight .s1 { color: #0a3069 }
-.highlight .ss { color: #990073 }
-.highlight .bp { color: #999 }
-.highlight .vc { color: #008080 }
-.highlight .vg { color: #008080 }
-.highlight .vi { color: #008080 }
-.highlight .il { color: #099 }
+@import "github-style";
